semester2/object_oriented_programming/tps/.svn/pristine/8d/8dafaa867f4df69a4c4e133fb01bd4298a84ad42.svn-base
./allumettes/StrategieExpert.java:19: error: cannot find symbol
			return Generateur.nb_Aleatoire(jeu);
			       ^
  symbol:   variable Generateur
  location: class StrategieExpert
./allumettes/StrategieNaive.java:8: error: cannot find symbol
		return Generateur.nb_Aleatoire(jeu);
		       ^
  symbol:   variable Generateur
  location: class StrategieNaive
2 errors
